2002-10-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-utils.cc (read_inf_nan_na, octave_read_double,
	octave_read_complex, octave_write_double, octave_write_complex):
	New functions.
	* CMatrix.cc (operator << (std::ostream&, const ComplexMatrix&)):
	Use octave_write_complex.
	(operator >> (std::istream&, const ComplexMatrix&)):
	Use octave_read_complex.
	* dMatrix.cc (operator << (std::ostream&, double)):
	Use octave_write_double.
	(operator >> (std::istream&, double)): Use octave_read_double.

2002-10-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-kpse.c (octave_kpse_clear_dir_cache): Delete.
	* oct-kpse.h: Delete decl.
	* pathsearch.cc (dir_path::init): Delete unnecessary call to
	::octave_kpse_clear_dir_cache.

2002-10-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-sstream.h: Undef HAVE_SSTREAM if using a version of g++
	earlier than 3.0.

	* Makefile.in (LINK_DEPS): Include $(LIBKPATHSEA) here.
	(liboctave.$(SHLEXT)): Not here.

2002-10-17  Paul Kienzle <pkienzle@users.sf.net>

	* oct-shlib.cc (octave_w32_shlib): New class to support Windows.

2002-10-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install-lib): Don't bother with versions for
	$(SHLBIN) files.

2002-10-16  Paul Kienzle <pkienzle@users.sf.net>

	* Makefile.in (LIB_DEPS): Include $(LIBS).

2002-10-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-cieee.c: Move everything but lo_ieee_init here.
	(lo_ieee_Inf_value, lo_ieee_NA_value, lo_ieee_NaN_value):
	New functions.

	* Makefile.in (install): No need to use cd to create links.
	(LINK_DEPS): Include $(LIBOCTAVE_LFLAGS) before list of libraries.

2002-10-14  Paul Kienzle <pkienzle@users.sf.net>

	* Makefile.in: Merge liboctave with liboct-readline and
	liboct-pathsearch.
	Use link dependencies for shared libs if INCLUDE_LINK_DEPS.
	(libraries): Depend on versioned library.
	(liboctave.$(SHLEXT), liboctave.$(SHLEXT_VER)): Reverse actions --
	build unversioned library, symbolic link adds version info.